--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# editor
 .idea
+# Extract the private components and their styles
 pages/admin
 src/components/Dashboard
 src/components/Sidebar
@@ -43,3 +45,4 @@ src/context/AdminContext.js
 src/styles/layout/admin.scss
 src/styles/layout/dashboard.scss
 src/styles/layout/panel.scss
+src/styles/layout/popups.scss
